# kairo-tutor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FEATURE.md  README.md  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: clicky-borrowing-notes.md
scripts/: build-dmg.sh  gen-onboarding-audio.ts  rebuild-run.sh  smoke-providers.mjs
server/: .env.example  AGENTS.md  README.md  drizzle.config.ts  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
server/drizzle/: 0000_clever_tyrannus.sql  0001_secret_shocker.sql  0002_aspiring_trish_tilby.sql  0003_sleepy_johnny_storm.sql  0004_moaning_captain_cross.sql
server/src/: app.ts  index.ts
server/tests/: auth-exchange.test.ts  auth-jwks.test.ts  billing.test.ts  db.test.ts  health.test.ts  me.test.ts  metering.test.ts  onboarding-proxy.test.ts  onboarding.test.ts  proxy-llm.test.ts  proxy-speech.test.ts
src/: App.tsx  AppRoot.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/skills/figma-first-animation/: SKILL.md
src-tauri/src/: accent.rs  audio.rs  auth.rs  capture.rs  color.rs  constants.rs  env.rs  framehash.rs  grounding.rs  input.rs  klog.rs  lib.rs  ocr.rs  onboarding.rs  panels.rs  permissions.rs  platform.rs  prompts.rs  proxy.rs  skills.rs  speech.rs  tutor.rs  types.rs
src-tauri/src/grounding/: mod.rs  model_json.rs  targets.rs  vision.rs
src/config/: env.ts  (+1 more)
tests/: accent.test.ts  act3Permissions.test.ts  activationState.test.ts  colorHex.test.ts  compositeMarks.test.ts  cursorGeometry.test.ts  cursorSpring.test.ts  cursorTheme.test.ts  env.test.ts  followAlong.test.ts  followController.test.ts  gestureSegmenter.test.ts  idleClose.test.ts  macosBundle.test.ts  mockTutor.test.ts  nameInPrompt.test.ts  nativeBridge.test.ts  notchCapsuleMode.test.ts  notchPrompt.test.ts  notchTutor.test.ts  onboarding-color.test.ts  openRouter.test.ts  orchestrator.test.ts  overlayAnnotationMode.test.ts  overlayEvents.test.ts  pointerWatch.test.ts  providerFactory.test.ts  providerPlanner.test.ts  reducedMotion.test.ts  runtimePlanner.test.ts  seededPrompts.test.ts  skills.test.ts  speechProviders.test.ts  tutorPlanner.test.ts  userName.test.ts  voiceRecorder.test.ts
(+159 files in other folders)
